Added dense rows to the table

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -972,6 +972,14 @@ body {
 			flex-direction: column;
 			justify-content: center;
 		}
+
+		$this: &;
+
+		&--dense {
+			#{$this}__cell {
+				height: 28px;
+			}
+		}
 	}
 
 	&__pagination-row {
