--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -400,7 +400,7 @@ body {
 }
 
 .vieolo-icon-button {
-	border-radius: $base-unit-half;	
+	border-radius: $base-unit-half;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -423,7 +423,7 @@ body {
 	&--small {
 		height: $row-height-small;
 		width: $row-height-small;
-		
+
 		svg {
 			width: $row-height-small - $base-unit;
 			height: $row-height-small - $base-unit;
@@ -446,7 +446,6 @@ body {
 		border-radius: 0px;
 	}
 }
-
 
 .vieolo-select {
 	display: inline-block;
@@ -958,12 +957,11 @@ body {
 	}
 }
 
-
 .vieolo-form-dialog {
 	background-color: white;
 	border-radius: 5px;
 
-	&__header {		
+	&__header {
 		border-bottom: 1px solid #f2f2f2;
 		height: 40px;
 		padding: 0 10px;
@@ -994,8 +992,8 @@ body {
 	overflow: scroll;
 }
 
-.vieolo-table {	
-	background-color: white;	
+.vieolo-table {
+	background-color: white;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 
@@ -1050,7 +1048,6 @@ body {
 		display: flex;
 		flex-direction: row-reverse;
 		padding: 5px;
-		
 	}
 }
 
@@ -1066,7 +1063,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: center;	
+			justify-content: center;
 		}
 
 		&--horizontal {
@@ -1081,7 +1078,7 @@ body {
 		cursor: pointer;
 		@include center-by-flex-row;
 		border-radius: $universal-border-radius-half;
-		
+
 		&:hover {
 			background-color: #f2f2f2;
 		}
@@ -1092,7 +1089,7 @@ body {
 			&:hover {
 				background-color: $primary-color-normal;
 			}
-			
+
 			p,
 			svg {
 				color: $primary-color-text;
@@ -1104,3 +1101,62 @@ body {
 		}
 	}
 }
+
+.vieolo-tab-switch {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	box-sizing: content-box;
+
+	&__tab-nav {
+		font-size: 15px;
+		padding: 0px;
+		list-style: none;
+		background: #fff;
+		display: inline-block;
+		border-radius: 5px;
+		position: relative;
+
+		@media all and (max-width: 500px) {			
+			font-size: 10px;			
+		}
+
+		&--active {
+			color: #fff !important;
+		}
+
+		a {
+			text-decoration: none;
+			color: #777;
+			font-size: 14px;
+			padding: 6px 0;
+			display: inline-block;
+			position: relative;
+			z-index: 1;
+			transition-duration: 0.6s;
+			cursor: pointer;
+			width: 140px;
+			font-weight: 400;			
+
+			i {
+				margin-right: 5px;
+			}
+		}
+	}	
+
+	&__selector {
+		height: 100%;
+		display: inline-block;
+		position: absolute;
+		left: 0px;
+		top: 0px;
+		z-index: 1;
+		border-radius: 5px;
+		transition-duration: 0.6s;
+		background-color: $primary-color-normal;
+	}
+}
+
+
+
+
