--- a/style/_base.scss
+++ b/style/_base.scss
@@ -14,6 +14,7 @@ $row-height-over: $base-unit * 7;
 $border-radius-normal: $base-unit;
 $border-radius-half: $base-unit-half;
 $border-radius-full: $base-unit * 2;
+$border-radius-none: 0;
 
 
 $box-shadow: 0px 3px 10px rgba(27, 78, 96,0.2) !default;
@@ -1360,6 +1361,10 @@ $navbar-height: $row-height-large !default;
 
 .border-radius {
 	&--zero {
+		border-radius: 0px;
+	}
+
+	&--none {
 		border-radius: 0px;
 	}
 
