Improved the style of the select when in focus

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -468,6 +468,11 @@ body {
 		width: 160px;
 		padding: 0 5px;
 
+		&:focus {
+			border: 2px solid $secondary-color-normal;
+			outline: none;
+		}
+
 		&--error {
 			p {
 				@include error-color;
