--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -568,7 +568,7 @@ body {
 			top: 0;
 			background-color: white;
 		}
-	}	
+	}
 }
 
 .vieolo-modal {
@@ -1007,7 +1007,6 @@ body {
 	}
 }
 
-
 .vieolo-confirmation-dialog {
 	background-color: white;
 	border-radius: 5px;
@@ -1169,8 +1168,8 @@ body {
 		border-radius: 5px;
 		position: relative;
 
-		@media all and (max-width: 500px) {			
-			font-size: 10px;			
+		@media all and (max-width: 500px) {
+			font-size: 10px;
 		}
 
 		&--active {
@@ -1187,13 +1186,13 @@ body {
 			z-index: 1;
 			transition-duration: 0.6s;
 			cursor: pointer;
-			font-weight: 400;			
+			font-weight: 400;
 
 			i {
 				margin-right: 5px;
 			}
 		}
-	}	
+	}
 
 	&__selector {
 		height: 100%;
@@ -1207,6 +1206,142 @@ body {
 	}
 }
 
+.vieolo-calendar-statefull-component {
+	@include card-dark-shadow;
+	display: inline-block;
 
+	&__calendar-month,
+	&__calendar-year {
+		@include center-by-flex-row;
 
+		p {
+			width: 130px;
+			text-align: center;
+			margin: 0 8px;
+		}
+	}
+}
 
+.vieolo-calendar-stateless-component {
+	&__calendar-content {
+		width: 210px;
+		border-top: 1px solid #f2f2f2;
+
+		&--with-week {
+			width: 240px;
+		}
+	}
+
+	&__row-header,
+	&__row {
+		display: grid;
+		justify-items: center;
+
+		div {
+			width: 20px;
+			height: 20px;
+			border-radius: 50%;
+			font-size: 10px;
+			font-weight: 500;
+			color: gray;
+			@include center-by-flex-row;
+		}
+	}
+
+	&__row-header {
+		margin: 0;
+
+		&--no-week {
+			grid-template-columns: repeat(7, 1fr);
+		}
+
+		&--with-week {
+			grid-template-columns: repeat(8, 1fr);
+		}
+	}
+
+	&__row {
+		margin: 3px 0;
+
+		&--no-week {
+			grid-template-columns: repeat(7, 1fr);
+		}
+
+		&--with-week {
+			grid-template-columns: repeat(8, 1fr);
+		}
+
+		div {
+			width: 20px;
+			height: 20px;
+			border-radius: 50%;
+			font-size: 10px;
+			@include center-by-flex-row;
+			cursor: pointer;
+
+			&:hover {
+				background: $hover-color;
+				background-image: $hover-color;
+			}
+		}
+
+		&__today {
+			background-color: $accessory-green-normal;
+		}
+
+		&__not-in-same-month {
+			color: gray;
+		}
+	}
+
+	&__week-col {
+		background-color: #f2f2f2;
+	}
+
+	&__selected {
+		background-color: $primary-color-normal;
+		color: $primary-color-text;
+	}
+
+	&__today {
+		background-color: $accessory-green-normal;
+		color: $accessory-green-text;
+	}
+
+	&__selected#{&}__today {
+		border: 1px solid $primary-color-normal;
+	}
+
+	&__not-in-same-month {
+		color: gray;
+	}
+}
+
+.vieolo-date-picker {
+	position: relative;
+	display: inline-block;
+
+	&__default-button {
+		width: 140px;
+		padding: 2px 10px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		height: 56px;
+		@include card-light-shadow;
+		@include card-selectable;
+		@include ripple-primary;
+
+		&__text-container {
+			height: 56px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+	}
+
+	.vieolo-calendar-statefull-component {
+		position: absolute;
+		z-index: 11;
+	}
+}
