--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1208,5 +1208,15 @@ body {
 }
 
 
+.vieolo-bar-chart {
+	position: relative;
 
+	&__tooltip {
+		position: absolute;
+		@include card-light-shadow;
+		padding: $base-unit;
+		top: 0;
+		//transform: translateX(-50%);
+	}
+}
 
