--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1587,3 +1587,47 @@ body {
 		}
 	}
 }
+
+
+.vieolo-context-menu {
+	box-sizing: border-box;
+	position: fixed;
+	@include card-dark-shadow;
+	border-radius: 5px;
+	z-index: 99;
+
+	&__menu-row {
+		border-radius: 5px;
+		width: 130px;
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		padding: 5px;
+
+		&:hover {
+			background-color: #f2f2f2;
+		}
+
+		svg {
+			height: 22px;
+		}
+
+		p {
+			margin: 5px;
+			font-size: 12px;
+			@include font-header;
+		}
+	}
+
+	&__menu-row-primary {
+		svg {
+			color: $primary-color-normal;
+		}
+	}
+
+	&__menu-row-error {
+		svg {
+			color: $error-color-normal;
+		}
+	}
+}
