Improved the style of the chart item icons

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1582,6 +1582,13 @@ body {
 					border-right: none;
 				}
 
+				&__bar-subtitle {
+					svg {
+						height: 16px;
+						width: 16px;
+					}
+				}
+
 				&__sup-item-bar {
 					position: absolute;
 					background-color: $success-color-normal;
