--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1358,8 +1358,6 @@ body {
 	}
 }
 
-
-
 .vieolo-gantt-chart {
 	border: 2px solid #ddd;
 	border-radius: 5px;
@@ -1568,7 +1566,7 @@ body {
 						background-color: $accessory-orange-transparent;
 						border: 1px solid $accessory-orange-normal;
 					}
-				}				
+				}
 
 				&__bar-start {
 					border-top-left-radius: 0;
@@ -1616,7 +1614,6 @@ body {
 	}
 }
 
-
 .vieolo-context-menu {
 	box-sizing: border-box;
 	position: fixed;
@@ -1658,4 +1655,70 @@ body {
 			color: $error-color-normal;
 		}
 	}
+}
+
+.vieolo-checkbox {
+    width: 21px;
+	height: 21px;
+	position: relative;
+
+	&:focus {
+		outline: none;
+		input {
+			border: 1px solid $secondary-color-normal;			
+		}
+	}
+
+    input,
+    svg {
+        width: 21px;
+        height: 21px;
+        display: block;
+    }
+    input {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        position: relative;
+        outline: none;
+        background: white;
+        border: none;
+        margin: 0;
+        padding: 0;
+        cursor: pointer;
+        border-radius: 4px;
+        transition: box-shadow .3s;
+        box-shadow: inset 0 0 0 1px $primary-color-light;
+        
+		&:hover {
+			box-shadow: inset 0 0 0 2px $primary-color-light;
+		}
+
+		&:checked {
+			box-shadow: inset 0 0 0 2px $primary-color-normal;
+			transition-delay: .4s;
+			& + svg {
+				--a: 16.1 86.12;
+				--o: 102.22;
+				stroke-dasharray: 16.1 86.12;
+        		stroke-dashoffset: 102.22;
+			}
+		}		
+    }
+    svg {
+        pointer-events: none;
+        fill: none;
+        stroke-width: 2px;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke: $primary-color-normal;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 21px;
+        height: 21px;
+        transform: scale(1) translateZ(0);
+		stroke-dasharray: 86.12;
+        stroke-dashoffset: 86.12;
+        transition: stroke-dasharray .6s, stroke-dashoffset .6s;
+    }    
 }
