Added checked background to table row

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1093,6 +1093,12 @@ body {
 				height: 28px;
 			}
 		}
+
+		&--checked {
+			& {
+				background-color: $tertiary-color-light;
+			}
+		}
 	}
 
 	&__pagination-row {
