Improved the style of the label container of date time picker

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1791,7 +1791,9 @@ body {
 	}
 	
 	&__label-container {
-		margin-bottom: $base-unit-half;
+		height: 30px;
+		@include flex-row-space-between;
+		padding: 0 5px;
 
 		label {
 			margin: 0;
