--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1513,6 +1513,7 @@ body {
 				display: flex;
 				flex-flow: column;
 				justify-content: center;
+				@include nonselectable;
 
 				&__title {
 					margin: 0;
@@ -1642,6 +1643,20 @@ body {
 					top: 36px;
 					z-index: 5;
 				}
+			}
+		}
+
+		&__drop-zone {
+			position: absolute;
+			height: 6px;
+			width: 100%;
+
+			&--top {
+				margin-top: -22.5px;
+			}
+
+			&--bottom {
+				margin-top: 22.5px;
 			}
 		}
 	}
