Moved the drag handle from the entire row to the column title

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1401,6 +1401,7 @@ body {
 	border-radius: 5px;
 	position: relative;
 	background-color: white;
+	@include nonselectable;
 
 	&__base {
 		display: flex;
