disabled the resize for FireFox and fixed the rounding issues

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1541,6 +1541,7 @@ body {
 					flex-flow: column;
 					justify-content: center;
 					border: 1px solid;
+					resize: both;
 
 					p {
 						margin: 0;
