fixed the position of the drop-zones in Chrome and Firefox

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1681,11 +1681,11 @@ body {
 			width: 100%;
 
 			&--top {
-				margin-top: -22.5px;
+				transform: translateY(-22.5px)
 			}
 
 			&--bottom {
-				margin-top: 22.5px;
+				transform: translateY(22.5px)
 			}
 		}
 	}
